man: Correct value of default KillUserProcesses=

--- a/man/custom-entities.ent.in
+++ b/man/custom-entities.ent.in
@@ -6,3 +6,4 @@
 <!ENTITY systemenvgeneratordir @SYSTEM_ENV_GENERATOR_PATH@>
 <!ENTITY userenvgeneratordir @USER_ENV_GENERATOR_PATH@>
 <!ENTITY CERTIFICATE_ROOT @CERTIFICATE_ROOT@>
+<!ENTITY KILL_USER_PROCESSES @KILL_USER_PROCESSES_YES_NO@>
